--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,41 @@
-<h1> Hello world </h1>
+<!doctype html> 
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>Find that Book!</title>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   <link rel="stylesheet" type="text/css"  href="/main.css">
+   <script src="/app.js"></script>
+
+
+   
+</head>
+
+<body>
+<div class = "container">
+	<div class = "row">
+		<div class = "column-md-12">
+			<h1>Find that Book!</h1>
+		</div>
+	</div>
+
+	<div class = "row">
+		<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Book Title" aria-label="Book Title" aria-describedby="button-addon2" id = "searchField">
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button" id="search-btn">Find Book</button>
+  </div>
+</div>
+	</div>
+</div>
+<div class = "row">
+
+</div>
+
+
+
+</body>
