--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    <link rel="stylesheet" type="text/css"  href="/main.css">
    <script src="/app.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
    
@@ -26,14 +27,18 @@
 	<div class = "row">
 		<div class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Book Title" aria-label="Book Title" aria-describedby="button-addon2" id = "searchField">
+
   <div class="input-group-append">
     <button class="btn btn-outline-secondary" type="button" id="search-btn">Find Book</button>
   </div>
 </div>
 	</div>
 </div>
+<div class = "container">
 <div class = "row">
-
+	<div class = "column-md-12" id = "results">
+	</div>
+</div>
 </div>
 
 
