all necessary criteria posting to page

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
 <body>
 <div class = "container">
 	<div class = "row">
-		<div class = "column-md-12">
+		<div class = "col" id = "head-title">
 			<h1>Find that Book!</h1>
 		</div>
 	</div>
@@ -35,9 +35,10 @@
 	</div>
 </div>
 <div class = "container">
-<div class = "row">
-	<div class = "column-md-12" id = "results">
+<div class = "row" >
+	<div class = "col-md" id = "results">
 	</div>
+	
 </div>
 </div>
 
