--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,20 @@
 }
 
 img {
-	height: 350px;
-	width: 275px;
-	padding-top: 10px;
+	
+	padding-top: 30px;
+	
+	padding-left: 10px;
 }
+
+li {
+	list-style-type: none;
+}
+
+#books {
+	background-color: grey;
+	margin-top: 20px;
+	margin-right: 20px;
+	padding-right: 50px;
+}
+
